# math

./: README.md  setup.cfg
.github/workflows/: python-publish.yml
src/: main.py
