[metadata]
author = Parsa Mohammadian
author_email = parsa2820@gmail.com
license = MIT
license_file = LICENSE
name = math
description = A command line tool to evaluate mathematical expressions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Parsa2820/math
version = 0.0.1

[options]
packages = find:
python_requires = >=3.0

[options.entry_points]
console_scripts =
    math = src.main:main